--- a/app/src/main/res/layout/activity_endereco.xml
+++ b/app/src/main/res/layout/activity_endereco.xml
@@ -6,8 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" tools:context="activities.EnderecoActivity">
 
-    <!-- Login progress -->
-    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
+    <ProgressBar android:id="@+id/endereco_progress" style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_marginBottom="8dp" android:visibility="gone" />
 
@@ -18,20 +17,43 @@
             android:layout_height="wrap_content" android:orientation="vertical">
 
             <EditView android:id="@+id/rua" android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress" android:maxLines="1"
+                android:layout_height="wrap_content" android:hint="rua"
+                android:inputType="text" android:maxLines="1"
                 android:singleLine="true" />
 
-            <EditText android:id="@+id/password" android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified" android:inputType="textPassword"
+            <EditText android:id="@+id/numero" android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:hint="número"
+                android:inputType="number"
                 android:maxLines="1" android:singleLine="true" />
 
-            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
+            <EditView android:id="@+id/complemento" android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:hint="complemento"
+                android:inputType="text" android:maxLines="1"
+                android:singleLine="true" />
+
+            <EditView android:id="@+id/bairro" android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:hint="bairro"
+                android:inputType="text" android:maxLines="1"
+                android:singleLine="true" />
+
+            <EditView android:id="@+id/cidade" android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:hint="cidade"
+                android:inputType="text" android:maxLines="1"
+                android:singleLine="true" />
+
+            <EditView android:id="@+id/pais" android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:hint="país"
+                android:inputType="text" android:maxLines="1"
+                android:singleLine="true" />
+
+            <EditView android:id="@+id/cep" android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:hint="cep"
+                android:inputType="number" android:maxLines="1"
+                android:singleLine="true" />
+
+            <Button android:id="@+id/save" style="?android:textAppearanceSmall"
                 android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
+                android:layout_marginTop="16dp" android:text="Salvar"
                 android:textStyle="bold" />
 
         </LinearLayout>
