--- a/app/src/main/res/layout/activity_endereco.xml
+++ b/app/src/main/res/layout/activity_endereco.xml
@@ -6,11 +6,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" tools:context="activities.EnderecoActivity">
 
-    <ProgressBar android:id="@+id/endereco_progress" style="?android:attr/progressBarStyleLarge"
+    <ProgressBar android:id="@+id/progress" style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_marginBottom="8dp" android:visibility="gone" />
 
-    <ScrollView android:id="@+id/endereco_scrool_view" android:layout_width="match_parent"
+    <ScrollView android:id="@+id/form" android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout android:id="@+id/endereco_form" android:layout_width="match_parent"
@@ -53,8 +53,14 @@
 
             <Button android:id="@+id/save" style="?android:textAppearanceSmall"
                 android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:layout_marginTop="16dp" android:text="Salvar"
+                android:layout_marginTop="16dp" android:text="Salvar ou Atualizar"
                 android:textStyle="bold" />
+
+            <Button android:id="@+id/erase" style="?android:textAppearanceSmall"
+                android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:layout_marginTop="16dp" android:text="Apagar"
+                android:textStyle="bold" />
+
 
         </LinearLayout>
     </ScrollView>
